--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "copy-to-clipboard": "^3.3.3",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.43.1",
     "hono": "^3.12.0",
     "lucide-react": "^0.511.0",
