--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "bun --watch server.ts",
     "start": "bun server.ts",
-    "build": "bun build server.ts --outdir ./dist && bun build ./client/frontend.tsx --outdir ./dist/client",
+    "build": "bun build server.ts --outdir ./dist && bun build ./client/frontend.tsx --outdir ./dist/client --plugins bun-plugin-tailwind",
     "setup": "mkdir -p data public && echo 'Setup complete!'",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "bun db/migrate.ts"
@@ -31,7 +31,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "tw-animate-css": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "latest",
